--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ipso-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ipso cli",
-  "bin": "./bin/ipso",
+  "bin": {
+    "ipso": "./bin/ipso"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
